--- a/kadai_018.html
+++ b/kadai_018.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="18章の課題課題です。" >
+    <meta name="18章の課題です。" >
     <title>18章課題</title>
 <link rel="stylesheet" href="style.css">
 </head>
-
+<body>
 <div id="top">
     <p class="top-child">sample</p>
     <p class="top-child">sample</p>
@@ -22,9 +22,6 @@
     <p class="bottom-child01"></p>
     <p class="bottom-child02"></p>
     <p class="bottom-child03"></p></div> 
-
-
-<body>
-    
+   
 </body>
 </html>
